--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,5 @@
+*.rb linguist-language=ASP.NET
+
 ###############################################################################
 # Set default behavior to automatically normalize line endings.
 ###############################################################################
