--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,4 @@
-*.rb linguist-language=C#
+*.rb linguist-language=CSharp
 
 ###############################################################################
 # Set default behavior to automatically normalize line endings.
