--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,6 @@
 *.rb linguist-language=csharp
+project-docs/* linguist-documentation
+docs/formatter.rb linguist-documentation=false
 
 ###############################################################################
 # Set default behavior to automatically normalize line endings.
