--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,5 @@
 *.ps1 linguist-language=csharp
+*.psm1 linguist-language=csharp
 
 ###############################################################################
 # Set default behavior to automatically normalize line endings.
